Fix text wrapping on firefox

--- a/web-service/components/css/DayBox.module.css
+++ b/web-service/components/css/DayBox.module.css
@@ -63,6 +63,7 @@
 }
 
 .diet {
+  display: inline-block;
   position: relative;
   background: var(--brand-primary);
   margin-left: .5em;
